added links to recipes on main page

--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+         <ol>
+            <li> Click here for the <a href="recipes/carrot-cupcakes.html">Carrot Cupcakes</a> recipe.
+            <li> Click here for the <a href="recipes/cheescake.html">Cheesecake</a> recipe.
+                <li> Click here for the <a href="recipes/hello-kitty-cake.html"</a>Hello Kitty Cake</a> recipe.</li>
     </body>
 </html>
