--- a/carrot-cupcakes.html
+++ b/carrot-cupcakes.html
@@ -4,3 +4,7 @@
         <meta charset="UTF-8">
         <title>Carrot Cupcakes Recipe</title>
     </head>
+     <main>
+        <body>
+            <h1>Carrot Cupcakes Recipe</h1>
+            <img src="images/carrot cupcakes.jpg" alt="Carrot Cupcakes">
