added ingredients and instructions to carrot cupcakes recipe

--- a/carrot-cupcakes.html
+++ b/carrot-cupcakes.html
@@ -8,3 +8,52 @@
         <body>
             <h1>Carrot Cupcakes Recipe</h1>
             <img src="images/carrot cupcakes.jpg" alt="Carrot Cupcakes">
+            <h3>Ingredients</h3>
+            <p>Makes 12 servings.</p>
+            <p>For Cupcakes:</p>
+            <ul>
+                <li> 1 ¼ cup (160g) all-purpose flour
+                <li> 1 teaspoon baking soda, important to level the teaspoon, see tips
+                <li> 1/4 teaspoon fine sea salt, see tips
+                <li> 3/4 teaspoon ground cinnamon
+                <li> 1/4 teaspoon ground ginger, optional
+                <li> 1/4 teaspoon ground cardamom, optional
+                <li> 1/8 teaspoon freshly grated nutmeg, optional
+                <li> 1/2 cup (118ml) canola or other vegetable oil
+                <li> 1/2 cup (100g) granulated sugar
+                <li> 1/2 cup (105g) light or dark brown sugar, packed
+                <li> 1 teaspoon vanilla extract
+                <li> 2 large eggs, at room temperature
+                <li> 1 ½ cups (150g) grated peeled carrots, 2 to 3 medium carrots
+                <li> 1/4 cup (35g) coarsely chopped pecans, optional
+                <li> 1/4 cup (35g) raisins, optional
+            </ul>
+            <p>For Cream Cheese Frosting</p>
+            <ul>
+                <li>4 ounces (115g) full-fat block cream cheese, softened to room temperature</li>
+                <li>2 tablespoons (28g) unsalted butter, softened to room temperature</li>
+                <li>1/2 teaspoon vanilla extract</li>
+                <li>Pinch fine sea salt</li>
+                <li>1 ½ cups (165g) powdered sugar or confectioners sugar, plus more as needed</li>
+                <li>Pinch ground cinnamon or ground cardamom, optional</li>
+                <li>1/4 cup (35g) coarsely chopped pecans, optional</li>
+            </ul>
+
+            <h3>Instructions:</h3>
+            <ol>
+                <li>Position a rack in the middle of the oven. Preheat the oven to 350°F (176°C). Line a 12-cup muffin pan with cupcake liners.</li>
+                <li>In a medium bowl, whisk flour, baking soda, salt, cinnamon, ginger, cardamom, and the nutmeg until well blended.</li>
+                <li>In a separate bowl, whisk the oil, sugars, and vanilla. Whisk in eggs, one at a time, until combined.</li>
+                <li>Switch to a large rubber spatula. Scrape the sides and bottom of the bowl, then add the dry ingredients in 3 parts, gently stirring until they disappear and the batter is smooth.
+                <li>Stir in the carrots, nuts, and raisins.</li>
+                <li>Divide the batter between the prepared muffin cups, filling about 3/4 of the way to the top. Bake until the tops of the cupcakes are springy when touched and when a toothpick inserted into the center of the cake comes out clean, 20 to 25 minutes.</li>
+                <li>Cool cupcakes in the pan for 5 minutes, then transfer them to a cooling rack and cool them completely before frosting.</li>
+                <li>In a large bowl, beat the cream cheese, butter, vanilla, and salt with a handheld electric mixer on medium speed until very creamy, about 2 minutes.
+                <li>For the creamiest frosting, sift the powdered sugar or whisk until most large lumps are gone.
+                <li>Beat in the powdered sugar, a 1/4 cup at a time, until fluffy. Add an additional 1/4 cup to 1/2 cup of powdered sugar for a thicker frosting.
+                <li>To make spiced frosting, beat in a pinch of ground cinnamon or cardamom.
+                <li>Frost the cooled cupcakes and, if you’d like, top with coarsely chopped pecans.</li>
+            </ol>
+
+
+        
