--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
          <ol>
             <li> Click here for the <a href="recipes/carrot-cupcakes.html">Carrot Cupcakes</a> recipe.
             <li> Click here for the <a href="recipes/cheescake.html">Cheesecake</a> recipe.
-                <li> Click here for the <a href="recipes/hello-kitty-cake.html"</a>Hello Kitty Cake</a> recipe.</li>
+                <li> Click here for the <a href="recipes/vanilla-slices.html"</a>Vanilla Slices</a> recipe.</li>
     </body>
 </html>
