--- a/carrot-cupcakes.html
+++ b/carrot-cupcakes.html
@@ -8,7 +8,8 @@
         <body>
             <h1>Carrot Cupcakes Recipe</h1>
             <img src="images/carrot cupcakes.jpg" alt="Carrot Cupcakes">
-            <h3>Ingredients</h3>
+           <h2>Description</h2>
+            <p>Carrot cupcakes, although they don't sound very tasty, have got to be one of the best types of cakes you will ever try!</p>
             <p>Makes 12 servings.</p>
             <p>For Cupcakes:</p>
             <ul>
@@ -39,7 +40,7 @@
                 <li>1/4 cup (35g) coarsely chopped pecans, optional</li>
             </ul>
 
-            <h3>Instructions:</h3>
+            <h2>Steps:</h2>
             <ol>
                 <li>Position a rack in the middle of the oven. Preheat the oven to 350°F (176°C). Line a 12-cup muffin pan with cupcake liners.</li>
                 <li>In a medium bowl, whisk flour, baking soda, salt, cinnamon, ginger, cardamom, and the nutmeg until well blended.</li>
@@ -54,6 +55,9 @@
                 <li>To make spiced frosting, beat in a pinch of ground cinnamon or cardamom.
                 <li>Frost the cooled cupcakes and, if you’d like, top with coarsely chopped pecans.</li>
             </ol>
+        </body>
+     </main>
+</HTML>
 
 
         
