added cheesecake recipe

--- a/cheescake.html
+++ b/cheescake.html
@@ -6,8 +6,34 @@
     </head>
     <main>
         <body>
-            
+            <h1>Cheesecake Recipe</h1>
+            <img src="images/cheesecake.jpg" alt="Cheesecake on a plate">
+            <h2>Description</h2>
+            <p>Cheesecake has always been one of my favourite treats to bake! Such a yummy taste that doesn't require much effort to create. </p>
+            <h2>Ingredients</h2>
+            <ul>
+                <li>Cream cheese</li>
+                <li>Water</li>
+                <li>Whipping Cream</li>
+                <li>Sugar</li>
+                <li>Vanilla</li>
+                <li>Lemon Juice</li>
+                <li>Salt</li>
+                <li>Plain biscuits</li>
+            <h2>Steps</h2>
+            <ol>
+                <li>Break biscuits and place in a food processor</li>
+                <li>Blend until a crumb texture forms</li>
+                <li>Add butter, salt and sugar (cinammon if you would like as well)</li>
+                <li>Press together into a pan.</li>
+                <li>Whip cream, then beat cream cheese and sugar in a seperate bowl. Add vanilla, lemon and salt.</li>
+                <li>Fold in whipped cream into this mixture</li>
+                <li>Pour into crust and refrigerate for 6 hours.</li>
+            </ol>
+            </ul>
         </body>
     </main>
 
 </html>
+        
+
