--- a/vanilla-slices.html
+++ b/vanilla-slices.html
@@ -2,7 +2,7 @@
 <HTML lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Vanille Slices Recipe</title>
+    <title>Vanilla Slices Recipe</title>
 </head>
 <main>
     <body>
